--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,14 @@
-# JAGUAR 45 CYBER KIT v4.0 - Core Dependencies
-# Charlie Syllas & Jaguar 45 ©2026
-
-# === WEB FRAMEWORK & SERVER ===
 Flask==2.3.3
 Werkzeug==2.3.7
-gunicorn==21.2.0
-flask-cors==4.0.0
-
-# === NETWORK & SECURITY ===
 requests==2.31.0
-urllib3==2.0.7
-cryptography==41.0.7
-paramiko==3.4.0
 dnspython==2.4.2
-python-whois==0.9.4
-pyOpenSSL==23.2.0
-
-# === PARSING & DATA PROCESSING ===
+python-whois==0.8.0
+urllib3==2.0.7
+gunicorn==21.2.0
+cryptography==41.0.7
 beautifulsoup4==4.12.2
-lxml==4.9.4
-
-# === OPTIONAL ENHANCEMENTS ===
-# colorama==0.4.6  # Optional: For colored console output
-# python-dotenv==1.0.0  # Optional: For environment variables
+lxml==4.9.3
+netifaces==0.11.0
+psutil==5.9.6
+colorama==0.4.6
+pycryptodome==3.19.0
