--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ urllib3==2.0.7
 gunicorn==21.2.0
 cryptography==41.0.7
 beautifulsoup4==4.12.2
-lxml==4.9.3
 netifaces==0.11.0
 psutil==5.9.6
 colorama==0.4.6
 pycryptodome==3.19.0
+Flask-CORS==4.0.0
